--- a/app/views/task-list-view/package.json
+++ b/app/views/task-list-view/package.json
@@ -116,7 +116,7 @@
         "@realmocean/spreadsheet": "^19.37.9",
         "@tuval/cg": "^0.0.16",
         "@tuval/core": "^0.0.103",
-        "@tuval/forms": "^1.0.100",
+        "@tuval/forms": "^1.0.139",
         "@tuval/graphics": "^0.0.11",
         "array-move": "^1.0.0",
         "arraybuffer-loader": "^1.0.8",
@@ -139,11 +139,10 @@
         "webpack-cli": "^4.7.2"
     },
     "dependencies": {
-        "@celmino/sdk": "^20.3.479",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
         "@mui/material": "^5.11.14",
-        "node-sass": "^8.0.0",
+        "@realmocean/sdk": "^1.0.13",
         "uuid": "^9.0.0"
     }
 }
