--- a/app/widget/list-widget/package.json
+++ b/app/widget/list-widget/package.json
@@ -115,6 +115,7 @@
         "@realmocean/query-builder": "^0.0.2",
         "@realmocean/services": "^21.0.0-beta.5",
         "@realmocean/spreadsheet": "^19.37.7",
+        "@realmocean/ui": "^1.0.2",
         "@tuval/cg": "^0.0.16",
         "@tuval/core": "^0.0.103",
         "@tuval/graphics": "^0.0.11",
@@ -134,7 +135,6 @@
         "webpack-cli": "^4.7.2"
     },
     "dependencies": {
-        "@celmino/ui": "^1.3.178",
         "@emoji-mart/data": "^1.1.2",
         "@emoji-mart/react": "^1.1.1",
         "@realmocean/antd": "^21.0.26",
