--- a/installer/.env
+++ b/installer/.env
@@ -1,6 +1,6 @@
 _APP_TITLE=Celmino
 _APP_ICON=/images/a.svg
-_APP_ENV=development
+_APP_ENV=production
 _APP_LOCALE=en
 _APP_WORKER_PER_CORE=6
 _APP_CONSOLE_WHITELIST_ROOT=disabled
@@ -8,16 +8,16 @@ _APP_CONSOLE_WHITELIST_EMAILS=
 _APP_CONSOLE_WHITELIST_IPS=
 _APP_SYSTEM_EMAIL_NAME=Realmocean
 _APP_SYSTEM_EMAIL_ADDRESS=team@realmocean.io
-_APP_SYSTEM_SECURITY_EMAIL_ADDRESS=security@realmocean.io
+_APP_SYSTEM_SECURITY_EMAIL_ADDRESS=stan@bimser.com.tr
 _APP_SYSTEM_RESPONSE_FORMAT=
 _APP_OPTIONS_ABUSE=disabled
 _APP_OPTIONS_ROUTER_PROTECTION=disbled
-_APP_OPTIONS_FORCE_HTTPS=disabled
+_APP_OPTIONS_FORCE_HTTPS=enabled
 _APP_OPTIONS_FUNCTIONS_FORCE_HTTPS=disabled
 _APP_OPENSSL_KEY_V1=your-secret-key
-_APP_DOMAIN=localhost
-_APP_DOMAIN_FUNCTIONS=functions.localhost
-_APP_DOMAIN_TARGET=localhost
+_APP_DOMAIN=cloud.celmino.com
+_APP_DOMAIN_FUNCTIONS=functions.celmino.com
+_APP_DOMAIN_TARGET=cloud.celmino.com
 _APP_REDIS_HOST=redis
 _APP_REDIS_PORT=6379
 _APP_REDIS_PASS=
