--- a/bios/package.json
+++ b/bios/package.json
@@ -104,8 +104,8 @@
     "devDependencies": {
         "@realmocean/antd": "^21.0.30",
         "@realmocean/imageeditor": "^20.3.118",
-        "@realmocean/sdk": "^1.0.26",
-        "@realmocean/services": "^21.0.2",
+        "@realmocean/sdk": "^1.0.29",
+        "@realmocean/services": "^21.0.0-beta.8",
         "@tuval/cg": "^0.0.16",
         "@tuval/core": "^0.0.103",
         "@tuval/forms": "^1.0.133",
