--- a/app/applets/task/package.json
+++ b/app/applets/task/package.json
@@ -117,6 +117,7 @@
         "@realmocean/sdk": "^1.0.13",
         "@realmocean/services": "^21.0.0-beta.5",
         "@realmocean/spreadsheet": "^19.37.9",
+        "@realmocean/ui": "^1.0.6",
         "@tuval/cg": "^0.0.16",
         "@tuval/core": "^0.0.103",
         "@tuval/forms": "^1.0.132",
