--- a/app/applets/notebooks/package.json
+++ b/app/applets/notebooks/package.json
@@ -114,7 +114,7 @@
         "@realmocean/inputs": "^21.0.0-beta.3",
         "@realmocean/navigations": "^21.0.0-beta.28",
         "@realmocean/query-builder": "^0.0.2",
-        "@realmocean/sdk": "^1.0.13",
+        "@realmocean/sdk": "^1.0.64",
         "@realmocean/services": "^21.0.0-beta.5",
         "@realmocean/spreadsheet": "^19.37.9",
         "@realmocean/ui": "^1.0.6",
@@ -149,6 +149,7 @@
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
         "@mui/material": "^5.11.14",
+        "@realmocean/vibe": "2.82.15",
         "node-sass": "^8.0.0",
         "react-promise-suspense": "^0.3.4",
         "uuid": "^9.0.0"
