--- a/app/applets/document-management/package.json
+++ b/app/applets/document-management/package.json
@@ -118,6 +118,7 @@
         "@realmocean/services": "^21.0.0-beta.5",
         "@realmocean/spreadsheet": "^19.37.9",
         "@realmocean/ui": "^1.0.6",
+        "@realmocean/vibe": "^2.82.43",
         "@tuval/cg": "^0.0.16",
         "@tuval/core": "^0.0.103",
         "@tuval/forms": "^1.0.159",
