--- a/bios/package.json
+++ b/bios/package.json
@@ -106,6 +106,7 @@
         "@realmocean/imageeditor": "^20.3.118",
         "@realmocean/sdk": "^1.0.60",
         "@realmocean/services": "^21.0.0-beta.8",
+        "@realmocean/vibe": "^2.82.43",
         "@tuval/cg": "^0.0.16",
         "@tuval/core": "^0.0.103",
         "@tuval/forms": "^1.0.133",
