--- a/app/applets/document-management/package.json
+++ b/app/applets/document-management/package.json
@@ -151,7 +151,9 @@
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
         "@mui/material": "^5.11.14",
+        "editorjs-inline-image": "^1.2.4",
         "node-sass": "^8.0.0",
+        "react-dom": "^18.2.0",
         "react-promise-suspense": "^0.3.4",
         "uuid": "^9.0.0"
     }
