--- a/app/widget/editorjs-widget/package.json
+++ b/app/widget/editorjs-widget/package.json
@@ -102,6 +102,7 @@
     },
     "devDependencies": {
         "@celmino/directoryprotocol": "^0.0.7",
+        "@codexteam/ajax": "^4.2.0",
         "@popperjs/core": "^2.11.8",
         "@realmocean/bpmn": "^21.0.0-beta.2",
         "@realmocean/charts": "^0.0.6",
@@ -132,6 +133,7 @@
         "to-string-loader": "^1.1.6",
         "ts-loader": "^9.2.4",
         "typescript": "^4.3.5",
+        "url-polyfill": "^1.1.12",
         "webpack": "^5.47.0",
         "webpack-cli": "^4.7.2"
     }
