--- a/.env
+++ b/.env
@@ -101,3 +101,4 @@ _APP_VCS_GITHUB_WEBHOOK_SECRET=
 _APP_MIGRATIONS_FIREBASE_CLIENT_ID=
 _APP_MIGRATIONS_FIREBASE_CLIENT_SECRET=
 _APP_ASSISTANT_OPENAI_API_KEY=
+_APP_LOCALHOST_DOMAIN=tuvalsoft.celmino.com
