--- a/installer/.env
+++ b/installer/.env
@@ -6,8 +6,8 @@ _APP_WORKER_PER_CORE=6
 _APP_CONSOLE_WHITELIST_ROOT=disabled
 _APP_CONSOLE_WHITELIST_EMAILS=
 _APP_CONSOLE_WHITELIST_IPS=
-_APP_SYSTEM_EMAIL_NAME=Realmocean
-_APP_SYSTEM_EMAIL_ADDRESS=team@realmocean.io
+_APP_SYSTEM_EMAIL_NAME=Celmino
+_APP_SYSTEM_EMAIL_ADDRESS=team@celmino.com
 _APP_SYSTEM_SECURITY_EMAIL_ADDRESS=stan@bimser.com.tr
 _APP_SYSTEM_RESPONSE_FORMAT=
 _APP_OPTIONS_ABUSE=disabled
@@ -56,11 +56,13 @@ _APP_INFLUXDB_HOST=influxdb
 _APP_INFLUXDB_PORT=8086
 _APP_STATSD_HOST=telegraf
 _APP_STATSD_PORT=8125
-_APP_SMTP_HOST=maildev
-_APP_SMTP_PORT=1025
-_APP_SMTP_SECURE=
-_APP_SMTP_USERNAME=
-_APP_SMTP_PASSWORD=
+
+_APP_SMTP_HOST=smtpout.secureserver.net
+_APP_SMTP_PORT=465
+_APP_SMTP_SECURE=ssl
+_APP_SMTP_USERNAME=team@celmino.com
+_APP_SMTP_PASSWORD=AAA123bbb
+
 _APP_SMS_PROVIDER=sms://username:password@mock
 _APP_SMS_FROM=+123456789
 _APP_STORAGE_LIMIT=30000000
