--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ _APP_CONSOLE_WHITELIST_ROOT=disabled
 _APP_CONSOLE_WHITELIST_EMAILS=
 _APP_CONSOLE_WHITELIST_IPS=
 _APP_SYSTEM_EMAIL_NAME=Celmino
-_APP_SYSTEM_EMAIL_ADDRESS=team@celmino.com
+_APP_SYSTEM_EMAIL_ADDRESS=info@pedabilisim.com
 _APP_SYSTEM_SECURITY_EMAIL_ADDRESS=security@realmocean.io
 _APP_SYSTEM_RESPONSE_FORMAT=
 _APP_OPTIONS_ABUSE=disabled
@@ -62,11 +62,18 @@ _APP_STATSD_PORT=8125
 #_APP_SMTP_SECURE=
 #_APP_SMTP_USERNAME=
 #_APP_SMTP_PASSWORD=
+
 _APP_SMTP_HOST=smtpout.secureserver.net
 _APP_SMTP_PORT=465
 _APP_SMTP_SECURE=ssl
 _APP_SMTP_USERNAME=team@celmino.com
 _APP_SMTP_PASSWORD=AAA123bbb
+
+# _APP_SMTP_HOST=smtp-mail.outlook.com
+#_APP_SMTP_PORT=587
+#_APP_SMTP_SECURE=tls
+#_APP_SMTP_USERNAME=info@pedabilisim.com
+#_APP_SMTP_PASSWORD=Pedasoft?2024_PDV  
 
 _APP_SMS_PROVIDER=sms://username:password@mock
 _APP_SMS_FROM=+123456789
