--- a/.env
+++ b/.env
@@ -122,3 +122,4 @@ _APP_MIGRATIONS_FIREBASE_CLIENT_ID=
 _APP_MIGRATIONS_FIREBASE_CLIENT_SECRET=
 _APP_ASSISTANT_OPENAI_API_KEY=
 _APP_LOCALHOST_DOMAIN=tuvalsoft.celmino.com
+_APP_FRONTEND_LIBS=/system/celmino-ui.js,https://apis.google.com/js/platform.js
