--- a/app/applets/document-management/package.json
+++ b/app/applets/document-management/package.json
@@ -154,6 +154,7 @@
         "editorjs-inline-image": "^1.2.4",
         "node-sass": "^8.0.0",
         "react-dom": "^18.2.0",
+        "react-google-drive-picker": "^1.2.2",
         "react-promise-suspense": "^0.3.4",
         "uuid": "^9.0.0"
     }
