--- a/app/widget/tldrw-widget/package.json
+++ b/app/widget/tldrw-widget/package.json
@@ -114,22 +114,26 @@
         "@realmocean/sdk": "^1.0.13",
         "@realmocean/services": "^21.0.0-beta.5",
         "@realmocean/spreadsheet": "^19.37.7",
-        "@tldraw/tldraw": "^1.29.2",
+        "@tldraw/assets": "2.0.0-beta.3",
+        "@tldraw/tldraw": "^2.0.0-beta.3",
         "@tuval/cg": "^0.0.16",
         "@tuval/core": "^0.0.103",
         "@tuval/forms": "^1.0.18",
         "@tuval/graphics": "^0.0.11",
         "arraybuffer-loader": "^1.0.8",
+        "core-js": "^3.36.0",
         "css-loader": "^3.2.0",
         "d3-graphviz": "^4.0.0",
         "declaration-bundler-webpack-plugin": "^1.0.3",
         "dts-bundle": "^0.7.3",
+        "file-loader": "^6.2.0",
         "ifdef-loader": "^2.3.0",
         "rimraf": "^3.0.2",
         "shelljs": "^0.8.4",
         "to-string-loader": "^1.1.6",
-        "ts-loader": "^9.2.4",
-        "typescript": "^4.3.5",
+        "ts-loader": "^9.5.1",
+        "typescript": "^5.3.3",
+        "url-loader": "^4.1.1",
         "webpack": "^5.47.0",
         "webpack-cli": "^4.7.2"
     }
